added validation fr agency website and started appointment work

--- a/app/views/dashboard/agency.html.erb
+++ b/app/views/dashboard/agency.html.erb
@@ -92,95 +92,104 @@
             </div>
           </div>
 
-          <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Appointment List</h2>
-
-          <!-- Activity list (smallest breakpoint only) -->
-          <div class="shadow sm:hidden">
-            <ul role="list" class="mt-2 divide-y divide-gray-200 overflow-hidden shadow sm:hidden">
-              <% @appointments.each do |appoinment| %>
-                <li>
-                  <a href="#" class="block bg-white px-4 py-4 hover:bg-gray-50">
-                    <span class="flex items-center space-x-4">
-                      <span class="flex flex-1 space-x-2 truncate">
-                        <!-- Heroicon name: mini/banknotes -->
-                        <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                          <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
-                        </svg>
-                        <span class="flex flex-col truncate text-sm text-gray-500">
-                          <span class="truncate">Payment to Molly Sanders</span>
-                          <span><span class="font-medium text-gray-900">$20,000</span> USD</span>
-                          <time datetime="2020-07-11">July 11, 2020</time>
-                        </span>
-                      </span>
-                      <!-- Heroicon name: mini/chevron-right -->
-                      <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
-                        <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
-                      </svg>
-                    </span>
-                  </a>
-                </li>
-              <% end %>
-
-              <!-- More transactions... -->
-            </ul>
-
-            <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3" aria-label="Pagination">
-              <div class="flex flex-1 justify-between">
-                <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Previous</a>
-                <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Next</a>
+          <% if @appointments.count == 0 %>
+            <div class="mt-10 only:flex flex-col items-center justify-center lg:flex-row">
+                
+              <div class="flex-1 text-center">
+                <p class="mb-4 h3">Create your first Appointment</p>
+                <%= link_to t("shared.scaffold.new.title", model: "Appointment"), new_appointment_path, class: "btn btn-primary" %>
               </div>
-            </nav>
-          </div>
+            </div>
+          <% else %>
+            <h2 class="mx-auto mt-8 max-w-6xl px-4 text-lg font-medium leading-6 text-gray-900 sm:px-6 lg:px-8">Recent Appointment List</h2>
+            <!-- Activity list (smallest breakpoint only) -->
+            <div class="shadow sm:hidden">
+              <ul role="list" class="mt-2 divide-y divide-gray-200 overflow-hidden shadow sm:hidden">
+                <% @appointments.each do |appoinment| %>
+                  <li>
+                    <a href="#" class="block bg-white px-4 py-4 hover:bg-gray-50">
+                      <span class="flex items-center space-x-4">
+                        <span class="flex flex-1 space-x-2 truncate">
+                          <!-- Heroicon name: mini/banknotes -->
+                          <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                            <path fill-rule="evenodd" d="M1 4a1 1 0 011-1h16a1 1 0 011 1v8a1 1 0 01-1 1H2a1 1 0 01-1-1V4zm12 4a3 3 0 11-6 0 3 3 0 016 0zM4 9a1 1 0 100-2 1 1 0 000 2zm13-1a1 1 0 11-2 0 1 1 0 012 0zM1.75 14.5a.75.75 0 000 1.5c4.417 0 8.693.603 12.749 1.73 1.111.309 2.251-.512 2.251-1.696v-.784a.75.75 0 00-1.5 0v.784a.272.272 0 01-.35.25A49.043 49.043 0 001.75 14.5z" clip-rule="evenodd" />
+                          </svg>
+                          <span class="flex flex-col truncate text-sm text-gray-500">
+                            <span class="truncate">Payment to Molly Sanders</span>
+                            <span><span class="font-medium text-gray-900">$20,000</span> USD</span>
+                            <time datetime="2020-07-11">July 11, 2020</time>
+                          </span>
+                        </span>
+                        <!-- Heroicon name: mini/chevron-right -->
+                        <svg class="h-5 w-5 flex-shrink-0 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path fill-rule="evenodd" d="M7.21 14.77a.75.75 0 01.02-1.06L11.168 10 7.23 6.29a.75.75 0 111.04-1.08l4.5 4.25a.75.75 0 010 1.08l-4.5 4.25a.75.75 0 01-1.06-.02z" clip-rule="evenodd" />
+                        </svg>
+                      </span>
+                    </a>
+                  </li>
+                <% end %>
 
-          <!-- Activity table (small breakpoint and up) -->
-          <div class="hidden sm:block">
-            <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
-              <div class="mt-2 flex flex-col">
-                <div class="min-w-full overflow-hidden overflow-x-auto align-middle shadow sm:rounded-lg">
-                  <table class="min-w-full divide-y divide-gray-200">
-                    <thead>
-                      <tr>
-                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Ref Numb" %></th>
-                        <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Customer Name" %></th>
-                        <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
-                        <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
-                      </tr>
-                    </thead>
-                    <tbody class="divide-y divide-gray-200 bg-white">
-                      <% @appointments.each do |appointment| %>
-                        <tr class="bg-white">
-                          <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
-                            <time datetime="2020-07-11"><%= appointment.ref_number %></time>
-                          </td>
-                          <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
-                            <div class="flex">
-                              <a href="#" class="group inline-flex space-x-2 truncate text-sm">
-                                <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
-                              </a>
-                            </div>
-                          </td>
-                          <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
-                            <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize">created</span>
-                          </td>
-                          <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
-                            <time datetime="2020-07-11"><%= appointment.start_time %></time>
-                          </td>
+                <!-- More transactions... -->
+              </ul>
+
+              <nav class="flex items-center justify-between border-t border-gray-200 bg-white px-4 py-3" aria-label="Pagination">
+                <div class="flex flex-1 justify-between">
+                  <a href="#" class="relative inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Previous</a>
+                  <a href="#" class="relative ml-3 inline-flex items-center rounded-md border border-gray-300 bg-white px-4 py-2 text-sm font-medium text-gray-700 hover:text-gray-500">Next</a>
+                </div>
+              </nav>
+            </div>
+
+            <!-- Activity table (small breakpoint and up) -->
+            <div class="hidden sm:block">
+              <div class="mx-auto max-w-6xl px-4 sm:px-6 lg:px-8">
+                <div class="mt-2 flex flex-col">
+                  <div class="min-w-full overflow-hidden overflow-x-auto align-middle shadow sm:rounded-lg">
+                    <table class="min-w-full divide-y divide-gray-200">
+                      <thead>
+                        <tr>
+                          <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Ref Numb" %></th>
+                          <th class="bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900" scope="col"><%= sortable @appointments, :id, "Customer Name" %></th>
+                          <th class="hidden bg-gray-50 px-6 py-3 text-left text-sm font-semibold text-gray-900 md:block" scope="col">Status</th>
+                          <th class="bg-gray-50 px-6 py-3 text-right text-sm font-semibold text-gray-900" scope="col">Date</th>
                         </tr>
-                      <% end %>
+                      </thead>
+                      <tbody class="divide-y divide-gray-200 bg-white">
+                        <% @appointments.each do |appointment| %>
+                          <tr class="bg-white">
+                            <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                              <time datetime="2020-07-11"><%= appointment.ref_number %></time>
+                            </td>
+                            <td class="w-full max-w-0 whitespace-nowrap px-6 py-4 text-sm text-gray-900">
+                              <div class="flex">
+                                <a href="#" class="group inline-flex space-x-2 truncate text-sm">
+                                  <p class="truncate text-gray-500 group-hover:text-gray-900"><%= appointment.customer.name %></p>
+                                </a>
+                              </div>
+                            </td>
+                            <td class="hidden whitespace-nowrap px-6 py-4 text-sm text-gray-500 md:block">
+                              <span class="inline-flex items-center px-2.5 py-0.5 rounded-full text-xs font-medium bg-green-100 text-green-800 capitalize"><%= appointment.status %></span>
+                            </td>
+                            <td class="whitespace-nowrap px-6 py-4 text-right text-sm text-gray-500">
+                              <time datetime="2020-07-11"><%= appointment.start_time %></time>
+                            </td>
+                          </tr>
+                        <% end %>
 
-                      <!-- More transactions... -->
-                    </tbody>
-                  </table>
-                  <!-- Pagination -->
-                  <% if @pagy.pages > 1 %>
-                    <div class="my-6 text-center">
-                      <%== pagy_nav(@pagy) %>
-                    </div>
-                  <% end %>
+                        <!-- More transactions... -->
+                      </tbody>
+                    </table>
+                    <!-- Pagination -->
+                    <% if @pagy.pages > 1 %>
+                      <div class="my-6 text-center">
+                        <%== pagy_nav(@pagy) %>
+                      </div>
+                    <% end %>
+                  </div>
                 </div>
               </div>
             </div>
-          </div>
+          <% end %>
         </div>
       </main>
     </div>
