--- a/app/views/customer_sites/edit.html.erb
+++ b/app/views/customer_sites/edit.html.erb
@@ -8,7 +8,7 @@
           <div class="sm:flex sm:items-center pb-6">
             <div class="sm:flex-auto"> 
               <h1 class="text-xl font-semibold text-gray-900">
-                <%= link_to "Sites", sites_path, class: "text-tokanisecondary-500" %>
+                <%= link_to "Sites", customer_sites_path, class: "text-tokanisecondary-500" %>
                   <span class="text-gray-400 font-light mx-2">\</span>
                   <%= t("shared.scaffold.edit.title", model: "Site") %>
               </h1>
