--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,15 @@
         <div class="flex flex-1 flex-col">
           <main class="flex-1">
             <%= yield %>
+            <dialog id="turbo-confirm">
+              <form method="dialog">
+                <p>Are you sure?</p>
+                <div>
+                  <button value="cancel">Cancel</button>
+                  <button value="confirm">Confirm</button>
+                </div>
+              </form>
+            </dialog>
           </main>
         </div>
       </div>
