hotfix some things

--- a/app/views/interpreters/my_assigned.html.erb
+++ b/app/views/interpreters/my_assigned.html.erb
@@ -1,2 +1,4 @@
 <!-- Shares a view with My Scheduled -->
-<%= render template: "interpreters/my_scheduled" %>
+<div class="ml-64">
+  <%= render template: "interpreters/my_scheduled" %>
+</div>
