TK 217 Languages active toggle ui enhancement

--- a/app/views/languages/index.html.erb
+++ b/app/views/languages/index.html.erb
@@ -35,7 +35,7 @@
                         </td>
                         <td class="hidden px-3 py-4 text-sm text-gray-500 sm:table-cell">
                           <div class="flex mx-3 justify-end">
-                            <div class="mr-6">
+                            <div class="mr-6 relative">
                               <%= toggle_is_active_button_for(language, toggle_active_language_path(language)) %>
                             </div>
                             <div>
