--- a/app/views/dashboard/show.html.erb
+++ b/app/views/dashboard/show.html.erb
@@ -1,9 +1,9 @@
-<%= current_account_user.roles %>
-
 <% if current_account_user.roles["interpreter"] %>
   <%= render partial: "interpreter" %>
 <% elsif current_account_user.agency_admin? %>
   <%= render partial: "agency_admin" %>
+<% elsif current_account_user.customer_admin? %>
+  <%= render template: "customer" %>
 <% elsif current_account_user.admin? %>
   <%= render partial: "tokani_admin" %>
 <% else %>
