--- a/app/views/interpreters/public.html.erb
+++ b/app/views/interpreters/public.html.erb
@@ -17,13 +17,13 @@
 
           <ul class="list-none flex flex-wrap text-sm font-medium text-center text-gray-500 border-b border-gray-200 dark:border-gray-700 dark:text-gray-400">
             <li class="mr-2">
-              <a href="/interpreters/public" aria-current="page" class="<%= inactive_tab %>">Public</a>
+              <a href="#" aria-current="page" class="<%= active_tab %>">Public</a>
             </li>
             <li class="mr-2">
               <a href="/interpreters/my_assigned" class="<%= inactive_tab %>">My Offered</a>
             </li>
             <li class="mr-2">
-              <a href="#" class="<%= active_tab  %>">My Scheduled</a>
+              <a href="/interpreters/my_scheduled" class="<%= inactive_tab  %>">My Scheduled</a>
             </li>
           </ul>
 
