--- a/app/views/interpreter_details/_form.html.erb
+++ b/app/views/interpreter_details/_form.html.erb
@@ -27,15 +27,15 @@
                     <%= form.text_field :start_date, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm", data: {controller: "flatpickr"} %>
                   </div>
                 </div>
-                
-  
+
+
                 <div class="col-span-6 sm:col-span-6 lg:col-span-2">
                   <div class="form-group">
                     <%= form.label :SSN, class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :ssn, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                 </div>
-  
+
                 <div class="col-span-6 sm:col-span-3 lg:col-span-2">
                   <div class="form-group">
                     <%= form.label :drivers_license, class:" block text-sm font-medium text-gray-700" %>
@@ -50,37 +50,37 @@
                   </div>
                 </div>
 
-               
-      
+
+
                 <div class="col-span-6 sm:col-span-3 lg:col-span-3">
                   <div class="form-group">
                     <%= form.label :emergency_contact_name, class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :emergency_contact_name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                  </div>
-      
+
                 <div class="col-span-6 sm:col-span-3 lg:col-span-3">
                   <div class="form-group">
                     <%= form.label :emergency_contact_phone, class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :emergency_contact_phone, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                 </div>
-    
+
                 <div class="col-span-6 sm:col-span-3">
                     <div class="form-group">
                         <%= form.label :interpreter_type, class: "block text-sm font-medium text-gray-700" %>
                         <%= form.select :interpreter_type, options_for_select(interpreter_type_options), {}, class: "form-control" %>
                       </div>
                 </div>
-    
+
                 <div class="col-span-6 sm:col-span-3">
                     <div class="form-group">
                         <%= form.label :gender , class: "block text-sm font-medium text-gray-700" %>
                         <%= form.select :gender, options_for_select(gender_options), {}, {class: 'form-control' } %>
                       </div>
                 </div>
-      
-                
+
+
 
                 <div class="col-span-6">
                   <div class="form-group">
@@ -88,21 +88,21 @@
                     <%= form.text_field :address, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                 </div>
-      
+
                 <div class="col-span-6 sm:col-span-6 lg:col-span-2">
                   <div class="form-group">
                     <%= form.label :city, class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                 </div>
-      
+
                 <div class="col-span-6 sm:col-span-3 lg:col-span-2">
                   <div class="form-group">
                     <%= form.label :state, class:" block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :state, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                   </div>
                 </div>
-      
+
                 <div class="col-span-6 sm:col-span-3 lg:col-span-2">
                   <div class="form-group">
                     <%= form.label :zip_code, class:" block text-sm font-medium text-gray-700" %>
@@ -113,9 +113,9 @@
             </div>
             <div class="bg-gray-50 px-4 py-3 text-right sm:px-6">
                 <div>
-                    <%= form.hidden_field :user_id, value: current_user.id %>
+                    <%= form.hidden_field :interpreter_id, value: current_user.id %>
                     <%= form.button button_text(form.send(:submit_default_value)), class: "btn btn-tokani_purple" %>
-                
+
                     <% if form.object.new_record? %>
                       <%= link_to t("cancel"), interpreter_details_path, class: "btn btn-white" %>
                     <% else %>
@@ -128,13 +128,13 @@
       </div>
     </div>
   </div>
-  <% end %>  
+  <% end %>
   <div class="hidden sm:block" aria-hidden="true">
     <div class="py-5">
       <div class="border-t border-gray-200"></div>
     </div>
   </div>
-  
+
   <div class="mt-10 sm:mt-0">
     <div class="md:grid md:grid-cols-3 md:gap-6">
       <div class="md:col-span-1">
