--- a/app/views/interpreter_details/edit.html.erb
+++ b/app/views/interpreter_details/edit.html.erb
@@ -1,16 +1,23 @@
-<%= content_for :title, t("shared.scaffold.edit.title", model: "Interpreter Detail") %>
-
-<div class="container mx-auto px-4 my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Interpreter Details", interpreter_details_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      <%= t("shared.scaffold.edit.title", model: "Interpreter Detail") %>
-    </h1>
-    <%= button_to t("delete"), @interpreter_detail, method: :delete, class: "btn btn-white", form: { data: { turbo_confirm: t("are_you_sure") } } %>
+<div class="flex flex-wrap my-4 lg:px-4">
+  <div class="lg:w-1/4 w-full p-4">
+    <%= render partial: "shared/account_navbar" %>
   </div>
 
-  <div class="p-8 bg-gray-100 rounded shadow">
-    <%= render "form", interpreter_detail: @interpreter_detail %>
+  <%= content_for :title, t("shared.scaffold.edit.title", model: "Interpreter Detail") %>
+
+  <div class="lg:w-3/4 w-full p-4">
+    <div class="lg:p-10 p-4 bg-white rounded-lg border border-gray-200 mb-3 sm:flex items-center justify-between">
+      <h1 class="h3">
+        <%= link_to "Interpreter Details", interpreter_details_path, class: "text-black" %>
+        <span class="text-gray-400 font-light mx-2">\</span>
+        <%= t("shared.scaffold.edit.title", model: "Interpreter Detail") %>
+      </h1>
+      <%= button_to t("delete"), @interpreter_detail, method: :delete, class: "btn btn-white", form: { data: { turbo_confirm: t("are_you_sure") } } %>
+    </div>
+
+    <div class="p-8 bg-gray-100 rounded shadow">
+      <%= render "form", interpreter_detail: @interpreter_detail %>
+    </div>
+
   </div>
 </div>
