--- a/app/views/interpreter_details/index.html.erb
+++ b/app/views/interpreter_details/index.html.erb
@@ -1,37 +1,36 @@
 <%= content_for :title, "Interpreter Details" %>
 <%= turbo_stream_from :interpreter_details %>
 
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <div>
-      <h1 class="h3">Interpreter Details</h1>
-
-      <div class="text-sm font-medium">
-        <span class="text-gray-500">Sort by:</span>
-        <%= sortable @interpreter_details, :interpreter_type, "Interpreter type", class: "text-gray-700 mr-1" %>
-        <%= sortable @interpreter_details, :gender, "Gender", class: "text-gray-700 mr-1" %>
-        <%= sortable @interpreter_details, :primary_phone, "Primary phone", class: "text-gray-700 mr-1" %>
-      </div>
-    </div>
-
-    <%= link_to t("shared.scaffold.new.title", model: "Interpreter Detail"), new_interpreter_detail_path, class: "btn btn-white" %>
+<div class="flex flex-wrap my-4 lg:px-4">
+  <div class="w-full mb-4 lg:w-1/4 lg:p-4">
+    <%= render partial: "shared/account_navbar" %>
   </div>
 
-  <%= tag.div id: ("interpreter_details" if first_page?), class: "bg-white rounded-md shadow p-6 space-y-8" do %>
-    <%= render partial: "interpreter_details/index", collection: @interpreter_details, as: :interpreter_detail, cached: true %>
+  <div class="w-full lg:w-3/4 lg:p-4">
+    <div class="p-4 bg-white border border-gray-200 rounded-lg lg:p-10">
+      <div class="mb-3">
+        <div class="mb-3 sm:flex items-center justify-between">
+          <h1 class="flex h3"><%= t(".title") %></h1>
+          <% if @interpreter_details.exists? %>
+            <div>
+              <%= link_to t(".edit"), edit_interpreter_detail_path(current_user.interpreter_detail), class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
+            </div>
+          <% end %>
+        </div>
 
-    <div class="hidden only:flex flex-col items-center justify-between lg:flex-row">
-      <%= image_tag "empty.svg", class: "mb-4 lg:w-1/2" %>
-      <div class="flex-1 text-center">
-        <p class="mb-4 h3">Create your first Interpreter Detail</p>
-        <%= link_to t("shared.scaffold.new.title", model: "Interpreter Detail"), new_interpreter_detail_path, class: "btn btn-primary" %>
+        <%= tag.div id: ("interpreter_details" if first_page?), class: "bg-white rounded-md shadow p-6 space-y-8" do %>
+          <%= render partial: "interpreter_details/index", collection: @interpreter_details, as: :interpreter_detail, cached: true %>
+
+          <div class="hidden only:flex flex-col items-center justify-between lg:flex-row">
+            <%= image_tag "empty.svg", class: "mb-4 lg:w-1/2" %>
+            <div class="flex-1 text-center">
+              <p class="mb-4 h3">Create your first Interpreter Detail</p>
+              <%= link_to t("shared.scaffold.new.title", model: "Interpreter Detail"), new_interpreter_detail_path, class: "btn btn-primary" %>
+            </div>
+          </div>
+        <% end %>
+
       </div>
     </div>
-  <% end %>
-
-  <% if @pagy.pages > 1 %>
-    <div class="my-6 text-center">
-      <%== pagy_nav(@pagy) %>
-    </div>
-  <% end %>
+  </div>
 </div>
