--- a/app/views/shared/_account_navbar.html.erb
+++ b/app/views/shared/_account_navbar.html.erb
@@ -6,4 +6,7 @@
     <%= nav_link_to t(".billing"), subscriptions_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: ["/subscriptions", "/payment_methods"] if Jumpstart.config.payments_enabled? %>
   <% end %>
   <%= nav_link_to t(".accounts"), accounts_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/accounts" %>
+  <% if current_account_user.interpreter? %>
+    <%= nav_link_to t(".interpreter_details"), interpreter_details_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details" %>
+  <% end %>
 </div>
