--- a/app/views/interpreter_details/new.html.erb
+++ b/app/views/interpreter_details/new.html.erb
@@ -10,7 +10,7 @@
       <h1 class="h3">
         <%= link_to "Interpreter Details", interpreter_details_path, class: "text-black" %>
         <span class="text-gray-400 font-light mx-2">\</span>
-        <%= t("shared.scaffold.new.title", model: "Interpreter Detail") %>
+        <%= t("shared.scaffold.new.title", model: "Interpreter Details") %>
       </h1>
 
       <div class="p-8 bg-gray-100 rounded shadow">
