--- a/app/views/shared/_account_navbar.html.erb
+++ b/app/views/shared/_account_navbar.html.erb
@@ -2,11 +2,13 @@
   <%= nav_link_to t(".profile"), edit_user_registration_path, class: "block no-underline p-3 px-6 rounded-t", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100" %>
   <%= nav_link_to t(".password"), edit_account_password_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100" %>
   <%= nav_link_to t(".connected_accounts"), user_connected_accounts_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100" if Devise.omniauth_configs.any? %>
-  <% unless turbo_native_app? %>
+  <% unless turbo_native_app? || current_account_user.interpreter? %>
     <%= nav_link_to t(".billing"), subscriptions_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: ["/subscriptions", "/payment_methods"] if Jumpstart.config.payments_enabled? %>
   <% end %>
   <%= nav_link_to t(".accounts"), accounts_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/accounts" %>
-  <% if current_account_user.interpreter? %>
-    <%= nav_link_to t(".interpreter_details"), interpreter_details_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details" %>
+  <% if current_account_user.interpreter? && current_user.interpreter_detail_filled_out? %>
+    <%= nav_link_to t(".interpreter_details"), interpreter_detail_path(current_user.interpreter_detail), class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details/:id" %>
+  <% elsif current_account_user.interpreter? %>
+    <%= nav_link_to t(".interpreter_details"), interpreter_details_path, class: "block no-underline p-3 px-6", active_class: "bg-blue-600 text-white hover:text-white", inactive_class: "text-gray-700 hover:text-gray-700 hover:bg-gray-100", starts_with: "/interpreter_details/:id" %>
   <% end %>
 </div>
