--- a/app/views/interpreter_details/_interpreter_detail.html.erb
+++ b/app/views/interpreter_details/_interpreter_detail.html.erb
@@ -1,20 +1,10 @@
 <div id="<%= dom_id interpreter_detail %>">
-  <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
-    <div>
-      <p>Interpreter Type</p>
+  <% @interpreter_detail_fields.each do |field| %>
+    <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
+      <div>
+        <p><%= field.titleize %></p>
+      </div>
+      <div class="col-span-2 text-gray-800 capitalize"><%= interpreter_detail.send(field) %></div>
     </div>
-    <div class="col-span-2 text-gray-800 capitalize"><%= interpreter_detail.interpreter_type %></div>
-  </div>
-  <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
-    <div>
-      <p>Gender</p>
-    </div>
-    <div class="col-span-2 text-gray-800 capitalize"><%= interpreter_detail.gender %></div>
-  </div>
-  <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
-    <div>
-      <p>Primary Phone</p>
-    </div>
-    <div class="col-span-2 text-gray-800"><%= interpreter_detail.primary_phone %></div>
-  </div>
+  <% end %>
 </div>
