--- a/app/views/interpreter_details/_interpreter_detail.html.erb
+++ b/app/views/interpreter_details/_interpreter_detail.html.erb
@@ -1,14 +1,10 @@
 <div id="<%= dom_id interpreter_detail %>">
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Interpreter type</p>
-    <%= interpreter_detail.interpreter_type %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Gender</p>
-    <%= interpreter_detail.gender %>
-  </div>
-  <div class="mb-4">
-    <p class="text-sm font-medium text-gray-500">Primary phone</p>
-    <%= interpreter_detail.primary_phone %>
-  </div>
+  <% @interpreter_detail_fields.each do |field| %>
+    <div class="grid md:grid-cols-3 py-5 text-gray-500 border-t border-gray-200">
+      <div>
+        <p><%= field.titleize %></p>
+      </div>
+      <div class="col-span-2 text-gray-800 capitalize"><%= interpreter_detail.send(field) %></div>
+    </div>
+  <% end %>
 </div>
