--- a/app/views/interpreter_details/show.html.erb
+++ b/app/views/interpreter_details/show.html.erb
@@ -1,17 +1,21 @@
 <%= content_for :title, "Interpreter Details ##{@interpreter_detail.id}" %>
 <%= turbo_stream_from @interpreter_detail %>
-
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Interpreter Details", interpreter_details_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      Interpreter Detail #<%= @interpreter_detail.id %>
-    </h1>
-    <%= link_to t("edit"), edit_interpreter_detail_path(@interpreter_detail), class: "btn btn-white" %>
+<div class="flex flex-wrap my-4 lg:px-4">
+  <div class="w-full mb-4 lg:w-1/4 lg:p-4">
+    <%= render partial: "shared/account_navbar" %>
   </div>
 
-  <div class="p-8 bg-white rounded shadow">
-    <%= render @interpreter_detail %>
+  <div class="w-full lg:w-3/4 lg:p-4">
+    <div class="p-4 bg-white border border-gray-200 rounded-lg lg:p-10">
+    <div class="mb-5 sm:flex items-center justify-between">
+      <div class="flex-1">
+        <p class="font-bold">Interpreter User Information</p>
+        <p class="text-sm font-medium text-gray-500">Interpreter details</p>
+      </div>
+      <%= link_to t(".edit"), edit_interpreter_detail_path(current_user.interpreter_detail), class: "btn bg-tokaniprimary-500 text-white hover:text-white hover:bg-tokaniprimary-400" %>
+    </div>
+      <%= render @interpreter_detail %>
+    </div>
   </div>
+
 </div>
